<resources>
    <string name="app_name">Planter</string>
    <string name="first_entry">My Collection</string>
    <string name="first_plant_name">No Plant</string>
    <string name="humidity_label">Humidity</string>
    <string name="temp_label">Temperature</string>
    <string name="venti_label">Ventilation</string>
    <string name="soil_moisture_label">Soil Moisture</string>
    <string name="lighting_label">Lighting</string>
    <string name="last_watering">Last Watering</string>
    <string name="empty_labels">N/A</string>

</resources>