<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pri_variant"
    tools:context=".StatBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Humidity & soil moisture -->
        <androidx.cardview.widget.CardView
            style="@style/rectangular_cardview">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="3"
                android:columnCount="3">

                <!-- Humidity -->
                <TextView
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/humidity_label"
                    style="@style/stat_labels"/>
                <TextView
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="0%"
                    style="@style/stat_data"/>

                <!-- Temperature -->
                <TextView
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/temp_label"
                    style="@style/stat_labels"/>
                <TextView
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="24C"
                    style="@style/stat_data"/>

                <!-- Ventilation -->
                <TextView
                    android:layout_row="0"
                    android:layout_column="2"
                    android:text="@string/venti_label"
                    style="@style/stat_labels"/>
                <TextView
                    android:layout_row="0"
                    android:layout_column="2"
                    android:text="ON"
                    style="@style/stat_data"/>

                <!-- Soil Moisture -->
                <TextView
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/soil_moisture_label"
                    style="@style/stat_labels"/>
                <TextView
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="20%"
                    style="@style/stat_data"/>

                <!-- Water Tank -->
                <TextView
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/water_tank_label"
                    style="@style/stat_labels"/>
                <TextView
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="0%"
                    style="@style/stat_data"/>

                <!-- Last Watering-->
                <TextView
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="@string/last_watering"
                    style="@style/stat_labels"/>
                <TextView
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="30m"
                    style="@style/stat_data"/>

                <!-- Water Tank -->
                <TextView
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:text="(!) Refill your water tank"
                    android:textColor="@color/secondary"
                    style="@style/stat_labels"/>
            </GridLayout>
        </androidx.cardview.widget.CardView>



        <!-- Plant image & other info -->
        <androidx.cardview.widget.CardView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_gravity="bottom"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/cac"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:padding="20dp"
                android:text="Cactus"
                android:textSize="50dp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="280dp"
                android:text="12 days"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>